# mesonvscmake

./: CMakeLists.txt  HACKING  get-soversion.sh  mediascanner-2.0.conf.in  mediascanner-2.0.pc.in  mediascanner-2.0.service.in  meson.build  readme.md
debian/: bileto_pre_release_hook  changelog  control  control.in  copyright  libmediascanner-2.0-3.symbols  libmediascanner-2.0-4.shlibs  mediascanner2.0.dirs  mediascanner2.0.install  qml-module-ubuntu-mediascanner0.1.install  rules  usr.bin.mediascanner-service-2.0  usr.lib.mediascanner-2.0.mediascanner-extractor
debian/tests/: control  msbuild
src/daemon/: CMakeLists.txt  InvalidationSender.cc  InvalidationSender.hh  MountWatcher.cc  MountWatcher.hh  Scanner.cc  Scanner.hh  SubtreeWatcher.cc  SubtreeWatcher.hh  VolumeManager.cc  VolumeManager.hh  meson.build  scannerdaemon.cc
src/extractor/: CMakeLists.txt  DetectedFile.hh  ExtractorBackend.cc  ExtractorBackend.hh  GStreamerExtractor.cc  GStreamerExtractor.hh  ImageExtractor.cc  ImageExtractor.hh  MetadataExtractor.cc  MetadataExtractor.hh  TaglibExtractor.cc  TaglibExtractor.hh  com.canonical.MediaScanner2.Extractor.service.in  dbus-interface.xml  dbus-marshal.cc  dbus-marshal.hh  main.cc  meson.build
src/mediascanner/: Album.cc  Album.hh  CMakeLists.txt  Filter.cc  Filter.hh  FolderArtCache.cc  MediaFile.cc  MediaFile.hh  MediaFileBuilder.cc  MediaFileBuilder.hh  MediaFilePrivate.cc  MediaStore.cc  MediaStore.hh  MediaStoreBase.cc  MediaStoreBase.hh  mediascanner-2.0.map  meson.build  scannercore.hh  utils.cc
src/mediascanner/internal/: FolderArtCache.hh  MediaFilePrivate.hh  sqliteutils.hh  utils.hh
src/mediascanner/mozilla/: fts3_porter.c
src/ms-dbus/: CMakeLists.txt  com.canonical.MediaScanner2.service.in  dbus-codec.cc  dbus-codec.hh  dbus-interface.hh  main.cc  service-skeleton.cc  service-skeleton.hh  service-stub.cc  service-stub.hh  service.hh
src/qml/Ubuntu/MediaScanner.0.1/: AlbumModelBase.cc  AlbumModelBase.hh  AlbumsModel.cc  AlbumsModel.hh  ArtistsModel.cc  ArtistsModel.hh  CMakeLists.txt  GenresModel.cc  GenresModel.hh  MediaFileModelBase.cc  MediaFileModelBase.hh  MediaFileWrapper.cc  MediaFileWrapper.hh  MediaStoreWrapper.cc  MediaStoreWrapper.hh  SongsModel.cc  SongsModel.hh  SongsSearchModel.cc  SongsSearchModel.hh  StreamingModel.cc  StreamingModel.hh  plugin.cc  plugin.hh  plugin.qmltypes  qmldir
src/utils/: CMakeLists.txt  meson.build  mountwatcher.cc  query.cc  watchertest.cc
test/: CMakeLists.txt  basic.cc  meson.build  test_config.h.in  test_dbus.cc  test_extractorbackend.cc  test_mediastore.cc  test_metadataextractor.cc  test_mfbuilder.cc  test_qml.cc  test_qml_nodb.qml  test_sqliteutils.cc  test_subtreewatcher.cc  test_util.cc  test_volumemanager.cc
test/media/: playlist.m3u  testfile.m4a  testvideo_1080p.ogv  testvideo_480p.ogv  testvideo_720p.ogv
test/qml/: tst_albumsmodel.qml  tst_artistsmodel.qml  tst_genresmodel.qml  tst_mediastore.qml  tst_songsearchmodel.qml  tst_songsmodel.qml
test/services/: com.canonical.MediaScanner2.Extractor.service.in  com.canonical.MediaScanner2.service.in
